Fixed the alignment of hr element

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,9 @@ h4 {
   font-family: "Articulat CF";
 }
 
-
+hr {
+  max-width: 60%;
+}
 section {
   margin: var(--default-margin);
 }
@@ -31,6 +33,13 @@ section {
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
+}
+.divide_line {
+  display: block;
+    width: 60%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .form-label {
   margin: var(--default-margin);
